--- a/restaurant.html
+++ b/restaurant.html
@@ -54,14 +54,15 @@
     <section id="reviews-container">
       <ul id="reviews-list"></ul>
     </section>
-    <h3>We want to hear from you! Leave your review</h3>
     <section id="review-form-container">
+      <h3>We want to hear from you! Leave your review</h3>
       <form id="reviews-form" method="post">
         <div>
           <label for="name">Name:</label></br>
           <input type="text" id="name" name="review_name">
         </div>
-        <div>
+        <p id="name">Rating:</p>
+        <div id="rating">
           <input type="radio" name="rating" value="1"> 1<br>
           <input type="radio" name="rating" value="2"> 2<br>
           <input type="radio" name="rating" value="3"> 3<br>
@@ -70,10 +71,10 @@
         </div>
         <div>
           <label for="review">Review:</label>
-          <input type="text" id="review" review="review">
+          <textarea id="review" review="review"></textarea>
         </div>
         <div class="submit-button">
-          <button type="submit"> Submit Review</button>
+          <button id="submit-button" type="submit"> Submit Review</button>
         </div>
       </form>
     </section>
