--- a/restaurant.html
+++ b/restaurant.html
@@ -56,7 +56,7 @@
     </section>
     <section id="review-form-container">
       <h3>We want to hear from you! Leave your review</h3>
-      <form id="reviews-form" method="post">
+      <form  role="form" aria-label="Review form" id="reviews-form" method="post">
         <div>
           <label for="name">Name:</label></br>
           <input type="text" id="name" name="review_name">
