fix: form field

--- a/restaurant.html
+++ b/restaurant.html
@@ -71,7 +71,7 @@
         </div>
         <div>
           <label for="review">Review:</label>
-          <textarea id="review" review="review"></textarea>
+          <textarea id="review" name="review"></textarea>
         </div>
         <div class="submit-button">
           <button id="submit-button" type="submit"> Submit Review</button>
