fix: change parameters

--- a/restaurant.html
+++ b/restaurant.html
@@ -59,7 +59,7 @@
       <form  role="form" aria-label="Review form" id="reviews-form" method="post">
         <div>
           <label for="name">Name:</label></br>
-          <input type="text" id="name" name="review_name">
+          <input type="text" id="name" id="review_name" name="review_name">
         </div>
         <p id="name">Rating:</p>
         <div id="rating">
