feat: submit review via form

--- a/restaurant.html
+++ b/restaurant.html
@@ -59,7 +59,7 @@
       <form  role="form" aria-label="Review form" id="reviews-form" method="post">
         <div>
           <label id="name" for="name">Name:</label></br>
-          <input aria-required="true" type="text" id="name" id="review_name" name="review_name">
+          <input aria-required="true" type="text" id="name" id="review_name" name="name">
         </div>
         <p id="rating-title">Rating:</p>
         <div id="rating" aria-required="true" role="radiogroup" aria-labelledby="rating-title">
